{
    "name": "PlayerControls",
    "maps": [
        {
            "name": "Player",
            "id": "16f9e34d-76dc-4343-98ec-16b5a22d2820",
            "actions": [
                {
                    "name": "Horizontal",
                    "type": "Button",
                    "id": "15bccc70-9063-4ef9-8cd6-81e76b33d540",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Vertical",
                    "type": "Button",
                    "id": "d9f9150d-a411-4f0d-bb8c-ea4d34045be2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump_T",
                    "type": "Button",
                    "id": "0b05f97a-cd23-41be-b523-0a41c0de4e03",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Lasso_T",
                    "type": "Button",
                    "id": "471e398d-cd19-4f8f-8abb-68987deebeba",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Run_T",
                    "type": "Button",
                    "id": "d8750c34-2490-40a0-ad14-194645030a17",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press"
                },
                {
                    "name": "Run_TR",
                    "type": "Button",
                    "id": "ff76cbad-7858-4713-8c7a-e9788d226108",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "Press(behavior=1)"
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "5e0419bd-eb18-488d-ba02-ac17a4efdcd3",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "5d87d465-f244-4f34-a06a-9dcfedb39a41",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "Pause",
                    "type": "Button",
                    "id": "353912dd-9718-46ff-8f69-79abf741b500",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                },
                {
                    "name": "ChangeWeapon",
                    "type": "Button",
                    "id": "1e71f116-3e09-48c3-b02f-1aedc4914bb0",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": ""
                }
            ],
            "bindings": [
                {
                    "name": "Gamepad",
                    "id": "2f9274e2-d3dd-4aa5-b2d1-c8727f0a23a9",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "07186597-8354-43c5-9051-8b5d1ce07f30",
                    "path": "<Gamepad>/dpad/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "813b7573-c761-4596-a407-8b948063011f",
                    "path": "<Gamepad>/dpad/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "b52e5a76-9117-4566-bad6-142d0ffd683d",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "c8131f5f-c63d-424b-814e-a9b38a069477",
                    "path": "<Keyboard>/leftArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0c3af04c-e0b1-445b-9a4a-0918c45ffa8e",
                    "path": "<Keyboard>/rightArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "USB_Gamepad",
                    "id": "3a3e19fa-bcb5-4af2-b62d-de1890f81591",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "e6c5a396-a1ec-41c5-98f6-a64b51b0e02e",
                    "path": "<HID::USB Gamepad >/stick/left",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "39477444-5419-41ba-8a36-3b7b86b549cf",
                    "path": "<HID::USB Gamepad >/stick/right",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Horizontal",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Gamepad",
                    "id": "ae33c894-bc18-4060-a2e3-1fee93e988ac",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "a1a84246-ace6-4159-bbb4-73665a8b64d7",
                    "path": "<Gamepad>/dpad/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "0e1e8d07-f827-4004-a5d4-2ffd31ff5dca",
                    "path": "<Gamepad>/dpad/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "Arrows",
                    "id": "0838c1e3-5629-4cb5-bab1-208507526b66",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "b5aed31e-a3f8-4ae9-81b4-d356a507a1a8",
                    "path": "<Keyboard>/downArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "bff3d30e-6518-46a0-9775-6481d02bf38f",
                    "path": "<Keyboard>/upArrow",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "USB_Gamepad",
                    "id": "92e30b47-1c41-4170-9bdc-aac8c616748c",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "87066a27-dbc8-4e97-9105-4bd7ed13246e",
                    "path": "<HID::USB Gamepad >/stick/down",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "8e4f9704-72c8-499d-b817-4e08a19794c2",
                    "path": "<HID::USB Gamepad >/stick/up",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Vertical",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "9566db01-2890-45c4-a33f-cbec02366199",
                    "path": "<Gamepad>/rightTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Lasso_T",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "0c0a6f95-9160-4300-89a4-87b8eb1bfbad",
                    "path": "<Keyboard>/c",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Lasso_T",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "da499dd6-8532-474f-9eb0-f3d70b9ae40c",
                    "path": "<Gamepad>/leftTrigger",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Lasso_T",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64332c1f-645e-40e0-b391-ef419c289c39",
                    "path": "<HID::USB Gamepad >/button5",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Lasso_T",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4d4e2aae-9875-4d05-8076-14acea73db68",
                    "path": "<HID::USB Gamepad >/button6",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Lasso_T",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "90f09c27-02ac-47d9-9091-c95eb3b59b62",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump_T",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "60e3d37b-ebbd-4d46-86ed-992346e942f7",
                    "path": "<Keyboard>/space",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump_T",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "9a9b714e-3e67-4957-9550-c27240c604e3",
                    "path": "<HID::USB Gamepad >/button3",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Jump_T",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "cd1f3967-ea8d-4a5d-8ec4-3d4ac411c506",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Run_T",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "4b481cd8-7d0b-4bc0-b0e6-e770b6c9211d",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Run_T",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "b4ac8495-97f7-4177-8408-119078ee040a",
                    "path": "<HID::USB Gamepad >/button4",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Run_T",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6dd61d60-a98d-4594-8b08-bdcf314df1c9",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f311802-6fed-4aaf-b99a-e71761a4fda7",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2f7dd6e0-5075-4c63-991c-592d830db976",
                    "path": "<HID::USB Gamepad >/button4",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35fedd21-2af6-4bb7-9b25-497a6b618bc7",
                    "path": "<Gamepad>/buttonSouth",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "52770c36-f39d-4b2f-bd6f-5e9996a4b927",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "019fa9c8-2d35-47d0-a0b8-62b7fbece161",
                    "path": "<HID::USB Gamepad >/button3",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "35f1ca8a-8149-4004-88b1-0fbed767458f",
                    "path": "<Gamepad>/buttonWest",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Run_TR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3939fc0f-e7c8-4a50-bc5d-f72abb129303",
                    "path": "<Keyboard>/leftShift",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Run_TR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "44296d4c-fc6c-4fad-8c6f-cd54d70368b3",
                    "path": "<HID::USB Gamepad >/button4",
                    "interactions": "Press(behavior=1)",
                    "processors": "",
                    "groups": "",
                    "action": "Run_TR",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "83efc52c-72c8-4d1a-aabb-49193acb8a3f",
                    "path": "<Keyboard>/p",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "49f45f54-7887-4909-b4c8-a71577ab1d2d",
                    "path": "<XInputController>/start",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "adeb3e81-689b-46e6-a7e2-716841a0dae5",
                    "path": "<DualShockGamepad>/start",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "089efb76-1084-4d1b-aa74-0f1333d3951c",
                    "path": "<HID::USB Gamepad >/button10",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "Pause",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "Keyboard",
                    "id": "3fdff001-4202-4e4a-8887-8e12493cfeb1",
                    "path": "1DAxis",
                    "interactions": "Press",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "34a39def-9792-42cb-b942-9d7c091293ef",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "1e8c2561-c4ab-49ab-946e-44257ff9850b",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "USB_Gamepad",
                    "id": "1d5871f6-6dbf-47f2-97fd-1da2de306cdd",
                    "path": "1DAxis",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "negative",
                    "id": "566234c1-4b3c-4d0e-a00a-cddec25ccea0",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "positive",
                    "id": "f3d84f42-ff6f-4989-b18b-41edf531b5b3",
                    "path": "",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "ChangeWeapon",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}